--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "shopify": "shopify",
+    "build": "shopify app build",
+    "dev": "shopify app dev",
     "info": "shopify app info",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy"
