Enable postinstall scripts for cloudflare

--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
   "dependencies": {
     "@shopify/app": "^3",
     "@shopify/cli": "^3"
-  }
+  },
+  "trustedDependencies": ["@shopify/plugin-cloudflare"]
 }
