--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ extensions/*/build
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+
+# Ignore shopify files created during app dev
+.shopify/*
+.shopify.lock
